@@ -71,7 +71,7 @@ by (rule transrec3_def [THEN def_transrec, THEN trans], force)
 
 
 declaration {* fn _ =>
-  Simplifier.map_ss (fn ss => ss setmksimps (K (map mk_eq o Ord_atomize o gen_all)))
+  Simplifier.map_ss (Simplifier.set_mksimps (K (map mk_eq o Ord_atomize o gen_all)))
 *}
 
 end
